--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,22 +3,18 @@
     <input type="checkbox" id="chk" [(ngModel)]="isSignup" aria-hidden="true">
 
     <div class="signup">
-      <form (ngSubmit)="onSignup()">
-        <label for="chk" aria-hidden="true">Sign up</label>
-        <input type="text" [(ngModel)]="signupUsername" name="signupUsername" placeholder="User name" required>
-        <input type="email" [(ngModel)]="signupEmail" name="signupEmail" placeholder="Email" required>
-        <input type="password" [(ngModel)]="signupPassword" name="signupPassword" placeholder="Password" required>
-        <button type="submit">Sign up</button>
-      </form>
+      <label for="chk" aria-hidden="true">Sign up</label>
+      <input type="text" [(ngModel)]="signupUsername" name="signupUsername" placeholder="User name" required>
+      <input type="email" [(ngModel)]="signupEmail" name="signupEmail" placeholder="Email" required>
+      <input type="password" [(ngModel)]="signupPassword" name="signupPassword" placeholder="Password" required>
+      <button type="button" (click)="onSignup()">Sign up</button>
     </div>
 
     <div class="login">
-      <form (ngSubmit)="onLogin()">
-        <label for="chk" aria-hidden="true">Login</label>
-        <input type="email" [(ngModel)]="loginEmail" name="loginEmail" placeholder="Email" required>
-        <input type="password" [(ngModel)]="loginPassword" name="loginPassword" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
+      <label for="chk" aria-hidden="true">Login</label>
+      <input type="email" [(ngModel)]="loginEmail" name="loginEmail" placeholder="Email" required>
+      <input type="password" [(ngModel)]="loginPassword" name="loginPassword" placeholder="Password" required>
+      <button type="button" (click)="onLogin()">Login</button>
     </div>
   </div>
 </div>
